<resources>
    <string name="app_name">Vacancy Catcher</string>
    <string name="team_header1">Команда</string>
    <string name="team_header2">Над приложением \nработали</string>
    <string name="developer1">Безгласная Ксения Александровна</string>
    <string name="developer2">Кириллов Родион Александрович</string>
    <string name="developer3">Куцык Александр Анатольевич</string>
    <string name="developer4">Манжа Наталья Владимировна</string>
    <string name="developer5">Сбоев Андрей Васильевич</string>
    <string name="main">Главное</string>
    <string name="favorites">Избранное</string>
    <string name="vacancy">Вакансия</string>
    <string name="search_vacancies">Поиск вакансий</string>
    <string name="filter_image_description">Кнопка фильтра</string>
    <string name="enter_request">Введите запрос</string>
    <string name="no_vacancies">Таких вакансий нет</string>
    <string name="no_internet">Нет интернета</string>
    <string name="cant_get_vacancies">Не удалось получить список вакансий</string>
    <string name="clear_search_btn_description">Кнопка очистки поиска</string>
    <string name="search_screen_image_btn_description">Картинка главного экрана поиска</string>
    <string name="search_btn_description">Кнопка поиска</string>
    <string name="search_image_description">Изображение главного экрана, которое заменяется на картинку ошибки</string>
    <string name="filter_settings">Настройки фильтрации</string>
    <string name="filter_location">Выбор места работы</string>
    <string name="filter_country">Выбор страны</string>
    <string name="filter_region">Выбор региона</string>
    <string name="filter_industry">Выбор отрасли</string>
    <string name="forward_btn_description">Стрелка вперед</string>
    <string name="hint_value">Значение</string>
    <string name="multi_string_hint_value">Какое-то очень-очень-очень-очень длинное многострочное значение</string>
    <string name="radio_btn_description">Радиокнопка</string>
    <string name="close_btn_description">Закрыть</string>
    <string name="place_work">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="input_amount">Введите сумму</string>
    <string name="expecting_salary">Ожидаемая зарплата</string>
    <string name="dont_show_with_out_salary">Не показывать без зарплаты</string>
    <string name="salary_is_null">Зарплата не указана</string>
    <string name="salary_from">от %s %s</string>
    <string name="salary_from_to">от %s до %s %s</string>
    <string name="salary_to">до %s %s</string>
    <string name="server_error_text">Ошибка сервера</string>
    <string name="incorrect_request_text">Некорректный запрос</string>
    <string name="experience_title_text">Требуемый опыт</string>
    <string name="vacancy_description_title_text">Описание вакансии</string>
    <string name="key_skills_title_text">Ключевые навыки</string>
    <string name="contacts_title_text">Контакты</string>
    <string name="contact_person_title_text">Kонтактное лицо</string>
    <string name="email_title_text">E-mail</string>
    <string name="phone_title_text">Телефон</string>
    <string name="comment_title_text">Комментарий</string>
    <string name="empty_list">Список пуст</string>
    <string name="vacancy_salary_text_full">от %1$s до %2$s %3$s</string>
    <string name="vacancy_salary_text_from">от %1$s %2$s</string>
    <string name="vacansy_salary_text_to">до %1$s %2$s</string>
    <string name="vacancy_address_text">г. %1$s, ул. %2$s д. %3$s</string>
    <string name="vacancy_salary_not_specified_text">зарплата не указана</string>
    <string name="vacancy_icon_description">Иконка вакансии</string>
    <string name="vacancy_was_deleted">Вакансия удалена или у вас нет прав для её просмотра</string>
    <string name="check_internet">Проверьте подключение к интернету</string>
    <string name="mistake_happened">Произошла ошибка</string>
    <string name="clear_region_btn_description">Кнопка для очистки поля поиска региона</string>
    <string name="enter_region">Введите регион</string>
    <string name="region_error_image_description">Картинка для ошибок поиска региона</string>
    <string name="cant_get_list">Не удалось получить\n список</string>
    <string name="reset">Сбросить</string>
    <string name="apply">Применить</string>
    <string name="no_region">Такого региона нет</string>
    <string name="back_btn_description">Кнопка Назад</string>
    <string name="region_error_text">Не удалось получить список</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="choose">Выбрать</string>
    <string name="industry_confirm_button_text">Выбрать</string>
    <string name="industry_text_view_hint">Введите отрасль</string>
    <string name="search_region_description">Иконка поиска региона</string>
</resources>
