<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <TextView
        style="@style/MediumTextStyle"
        android:paddingStart="@dimen/spacing_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_size_64"
        android:text="@string/team_header1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_size_92"
        android:layout_marginBottom="@dimen/spacing_24"
        android:fontFamily="@font/ys_display_bold"
        android:gravity="center_vertical"
        android:textColor="?attr/colorOnPrimary"
        android:paddingStart="@dimen/spacing_16"
        android:text="@string/team_header2"
        android:textSize="@dimen/text_size_32" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextDevelopersStyle"
        android:text="@string/developer1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextDevelopersStyle"
        android:text="@string/developer2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextDevelopersStyle"
        android:text="@string/developer3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextDevelopersStyle"
        android:text="@string/developer4"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextDevelopersStyle"
        android:text="@string/developer5"/>

</LinearLayout>
