<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/ff_tv_header"
        style="@style/MediumTextStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/item_size_64"
        android:text="@string/search_vacancies"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/filter_image_description"
        android:src="@drawable/ic_filter_off"
        app:layout_constraintBottom_toBottomOf="@+id/ff_tv_header"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/ff_tv_header" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_tv_cl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_4"
        android:background="@drawable/background_edit_text"
        android:backgroundTint="@color/grey_light"
        android:backgroundTintMode="src_over"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/ff_tv_header">

        <EditText
            android:id="@+id/search_et"
            style="@style/RegularTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_8"
            android:autofillHints="name"
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:hint="@string/enter_request"
            android:inputType="text"
            android:maxLength="40"
            android:maxLines="1"
            android:minHeight="@dimen/item_size_48"
            android:singleLine="true"
            android:textAppearance="@style/RegularTextStyle"
            android:textColor="@color/black"
            android:textColorHint="?attr/colorOnSecondary"
            app:layout_constraintEnd_toStartOf="@+id/search_icon_iv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/search_icon_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_8"
            android:contentDescription="@string/search_btn_description"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@+id/search_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/search_et" />

        <ImageView
            android:id="@+id/clear_search_icon_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/clear_search_btn_description"
            android:src="@drawable/ic_close"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/search_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/search_et" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/no_vacancies_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_vacancies"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        style="@style/RegularTextStyle"
        android:layout_margin="16dp"
        android:background="@drawable/background_edit_text"
        android:backgroundTint="@color/blue"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/search_tv_cl" />


    <ImageView
        android:id="@+id/search_image_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/placeholder_main"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/search_tv_cl"
        android:contentDescription="@string/seacrh_screen_image_btn_description"/>

    <TextView
        android:id="@+id/internet_error_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="top|center"
        android:text="@string/no_internet"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/placeholder_internet_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/no_vacancies_tv" />

    <TextView
        android:id="@+id/empty_list_error_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="top|center"
        android:text="@string/cant_get_vacancies"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/placeholder_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/no_vacancies_tv" />

    <ScrollView
        android:id="@+id/scroll_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/no_vacancies_tv">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vacancies_rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/no_vacancies_tv" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
