<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/spacing_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/spacing_16" />

    <ImageView
        android:id="@+id/back_arrow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/filter_setup_text_view"
        style="@style/MediumTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        android:text="@string/filter_settings"
        app:layout_constraintBottom_toBottomOf="@id/back_arrow_button"
        app:layout_constraintStart_toEndOf="@id/back_arrow_button"
        app:layout_constraintTop_toTopOf="@id/back_arrow_button" />

    <TextView
        android:id="@+id/place_work_text_view"
        style="@style/Regular16GrayTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_size_36dp"
        android:paddingVertical="@dimen/item_size_20dp"
        android:text="@string/place_work"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/filter_setup_text_view" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toBottomOf="@id/place_work_text_view"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintTop_toTopOf="@id/place_work_text_view"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/industry_text_view"
        style="@style/Regular16GrayTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/item_size_20dp"
        android:text="@string/industry"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/place_work_text_view" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toBottomOf="@id/industry_text_view"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintTop_toTopOf="@id/industry_text_view"
        app:tint="?attr/colorOnPrimary" />

    <EditText
        android:id="@+id/salary_edit_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/item_size_52dp"
        android:layout_marginTop="@dimen/spacing_24"
        android:background="@drawable/edit_text_background"
        android:hint="@string/input_amount"
        android:inputType="number"
        android:maxLines="1"
        android:paddingStart="@dimen/spacing_16"
        android:paddingTop="@dimen/item_size_22dp"
        android:paddingEnd="@dimen/item_size_56"
        android:textCursorDrawable="@drawable/cursor"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/industry_text_view"
        style="@style/RegularTextStyle"
        />

    <TextView
        android:id="@+id/hint_text_view"
        style="@style/Regular12HintTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_8"
        android:text="@string/expecting_salary"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@id/salary_edit_text" />

    <ImageView
        android:id="@+id/clear_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_16"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@id/salary_edit_text"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintTop_toTopOf="@id/salary_edit_text"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/with_out_salary_text_view"
        style="@style/RegularTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_size_44dp"
        android:text="@string/dont_show_with_out_salary"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/salary_edit_text" />

    <ImageView
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/checkbox"
        app:layout_constraintBottom_toBottomOf="@id/with_out_salary_text_view"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintTop_toTopOf="@id/with_out_salary_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
