<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <!--Заголовок Выбор региона-->
    <ImageView
        android:id="@+id/region_back_arrow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/search_header_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/search_header_tv"
        app:layout_constraintTop_toTopOf="@+id/search_header_tv"
        app:tint="?attr/colorOnPrimary"
        android:contentDescription="@string/back_btn_description"/>

    <TextView
        android:id="@+id/search_header_tv"
        style="@style/MediumTextStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/item_size_64"
        android:text="@string/filter_region"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@+id/region_back_arrow_button"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Подложка под полем поиска и кнопокой очистки-->
    <View
        android:id="@+id/region_field_cl"
        style="@style/BackgroundSearchRequestStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/item_size_48"
        android:layout_marginVertical="@dimen/spacing_4"
        android:background="@drawable/background_edit_text"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/search_header_tv" />

    <!--Поле поиска-->
    <EditText
        android:id="@+id/region_field_et"
        style="@style/RegularTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_8"
        android:autofillHints="name"
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:hint="@string/enter_region"
        android:inputType="text"
        android:maxLength="40"
        android:maxLines="1"
        android:minHeight="@dimen/item_size_48"
        android:singleLine="true"
        android:textAppearance="@style/RegularTextStyle"
        android:textColor="@color/black"
        android:textColorHint="?attr/colorOnSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/region_field_cl"
        app:layout_constraintEnd_toStartOf="@+id/clear_region_icon_iv"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/region_field_cl" />

    <!--Крестик для очистки поиска-->
    <ImageView
        android:id="@+id/clear_region_icon_iv"
        android:layout_width="@dimen/item_size_48"
        android:layout_height="@dimen/item_size_48"
        android:contentDescription="@string/clear_region_btn_description"
        android:scaleType="center"
        android:src="@drawable/ic_close"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/region_field_et"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/region_field_et" />

    <!-- Изображение для ошибок -->
    <ImageView
        android:id="@+id/region_picture_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/region_error_image_description"
        android:scaleType="fitCenter"
        android:src="@drawable/placeholder_empty_location_list"
        app:layout_constraintBottom_toTopOf="@id/region_picture_text_tv"
        app:layout_constraintDimensionRatio="h,1.47:1"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/region_field_cl"
        app:layout_constraintVertical_chainStyle="packed"
        android:visibility="gone" />

    <!-- Сообщение об ошибке поиска региона, при старте поиска будет пустым -->
    <TextView
        android:id="@+id/region_picture_text_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:textAlignment="center"
        android:textAppearance="@style/MediumTextStyle"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/region_picture_iv"
        tools:text="Сообщение об ошибке" />

    <!--Список-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/region_list_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_16"
        android:orientation="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintBottom_toTopOf="@+id/region_progress_pg"
        app:layout_constraintTop_toBottomOf="@+id/region_field_et"
        app:layout_constraintVertical_bias="0"
        app:reverseLayout="false"
        tools:itemCount="10"
        tools:listitem="@layout/view_item_forward_btn"
        tools:visibility="visible" />

    <!--Прогресс бар-->
    <ProgressBar
        android:id="@+id/region_progress_pg"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/region_list_rv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"/>

</androidx.constraintlayout.widget.ConstraintLayout>
